hero banner styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 			</h3>
 			<a class="cta alt" href="#more-info">Read More</a>
 		</div>
-		<div class="chartacter1"></div>
+		<div class="chartacter1"> 
+			<img src="img/charcater1.png" alt="">
+		<charcter1 class="png"></charcter1></div>
 		<div class="chartacter2"></div>
 		<div class="chartacter3"></div>
 	</div>
