--- a/index.html
+++ b/index.html
@@ -42,29 +42,33 @@
 	</div>
 	<div class="sep"></div>
 	<div class="story" id="story">
-		<ul class="nb-list">
-			<li class="blue">Rock 'n Roll</li>
-			<li class="gray">&nbsp;</li>
-			<li class="yellow dragging">Laughter</li>
-			<li class="red">Square Offs</li>
-			<li class="pink">Circuitous Routes</li>
-			<li class="salmon">Trigonometry</li>
-			<li class="blue">Rad Hats</li>
-			<li class="yellow">Being Silly</li>
-		</ul>
-		<h3>
-			Left: THings We Find Important<br/>
-			Below: Our Story
-		</h3>
-		<p>Once upon a time there was a group of shapes. THey were mostly black and rectangular. They were mean and ver serious. </p>
-		<p> And so they kicked the 3 shapes that didn't confrom out of their gang, which was called the Right Angled Gang.</p>
-		<p> And So these 3 shapes were very sand, but found great joy and comfrot being around each other. They soon started having a lot of fun, started rocking and rolling, started being silly, and became the most well-known shape gang in the universe.</p>
-		<p>They even started making fun of squares and rectangles in what they like to call 'Square Offs'!</p>
+		<div class="wrapper">
+			<ul class="nb-list">
+				<li class="blue">Rock 'n Roll</li>
+				<li class="gray">&nbsp;</li>
+				<li class="yellow dragging">Laughter</li>
+				<li class="red">Square Offs</li>
+				<li class="pink">Circuitous Routes</li>
+				<li class="salmon">Trigonometry</li>
+				<li class="blue">Rad Hats</li>
+				<li class="yellow">Being Silly</li>
+			</ul>
+			<h3>
+				Left: Things We Find Important<br/>
+				Below: Our Story
+			</h3>
+			<p>Once upon a time there was a group of shapes. They were mostly black and rectangular. They were mean and ver serious. </p>
+			<p> And so they kicked the 3 shapes that didn't confrom out of their gang, which was called the Right Angled Gang.</p>
+			<p> And So these 3 shapes were very sand, but found great joy and comfrot being around each other. They soon started having a lot of fun, started rocking and rolling, started being silly, and became the most well-known shape gang in the universe.</p>
+			<p>They even started making fun of squares and rectangles in what they like to call 'Square Offs'!</p>
+		</div>
 	</div>
 	<div class="sep"></div>
-	<img src="img/the-gang.png" width="735" height="399" alt="The Gang">
+	<img class="gang-img" src="img/the-gang.png" width="735" height="399" alt="The Gang">
 	<footer>
-		Made by Harrison from <a target="_blank" href="https://taptapkaboom.com"> Tap Tap Kaboom </a>.
+		<div class="wrapper">
+			Made by Harrison from <a target="_blank" href="https://taptapkaboom.com"> Tap Tap Kaboom </a>.
+		</div>
 	</footer>
 	<div class="popupp">
 		<div class="blanket"></div>
